// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date input nested dependant components passes through fieldset params without breaking 1`] = `
<fieldset class="govie-fieldset"
          role="group"
          aria-describedby="dob-hint"
>
  <legend class="govie-fieldset__legend">
    What is your date of birth?
  </legend>
</fieldset>
`;

exports[`Date input nested dependant components passes through label params without breaking 1`] = `
<label class="govie-label govie-date-input__label"
       for="dob-day"
>
  Day
</label>
<label class="govie-label govie-date-input__label"
       for="dob-month"
>
  Month
</label>
<label class="govie-label govie-date-input__label"
       for="dob-year"
>
  Year
</label>
`;

exports[`Date input passes through html fieldset params without breaking 1`] = `
<fieldset class="govie-fieldset"
          role="group"
>
  <legend class="govie-fieldset__legend">
    What is your
    <b>
      date of birth
    </b>
    ?
  </legend>
</fieldset>
`;

exports[`Date input when it includes a hint renders the hint 1`] = `
<div id="dob-hint"
     class="govie-hint"
>
  For example, 31 3 1980
</div>
`;

exports[`Date input when it includes an error message renders the error message 1`] = `
<p id="dob-errors-error"
   class="govie-error-message"
>
  Error message goes here
</p>
`;
